--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "p-each-series": "^1.0.0",
         "parse5": "^5.1.0",
         "ts-jest": "^23.10.5",
+        "ts-node": "^8.0.2",
         "ts-util-is": "^1.1.3",
         "webpack": "^4.29.0",
         "webpack-cli": "^3.2.1"
