--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,14 +3,24 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [
-        {
+    "configurations": [{
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
             "program": "${workspaceFolder}/dist",
             "outFiles": [
-                "${workspaceFolder}/**/*.js"
+                "${workspaceFolder}/dist/**/*.js"
+            ]
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Webpack Config",
+            "program": "${workspaceFolder}/node_modules/.bin/webpack-cli",
+            "cwd": "${workspaceFolder}/e2e",
+            "args": ["--mode", "development"],
+            "outFiles": [
+                "${workspaceFolder}/dist/**/*.js"
             ]
         },
         {
@@ -34,7 +44,8 @@
             "args": [
                 "--config",
                 "jest-ut.config.js",
-                "--runInBand"
+                "--runInBand",
+                "test/asset.spec.ts"
             ],
             "runtimeArgs": [
                 "--nolazy",
