--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,8 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [{
+    "configurations": [
+        {
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
@@ -18,7 +19,10 @@
             "name": "Launch Webpack Config",
             "program": "${workspaceFolder}/node_modules/.bin/webpack-cli",
             "cwd": "${workspaceFolder}/e2e",
-            "args": ["--mode", "development"],
+            "args": [
+                "--mode",
+                "development"
+            ],
             "outFiles": [
                 "${workspaceFolder}/dist/**/*.js"
             ]
@@ -45,7 +49,7 @@
                 "--config",
                 "jest-ut.config.js",
                 "--runInBand",
-                "test/asset.spec.ts"
+                "test/index-writer/index-writer.spec.ts"
             ],
             "runtimeArgs": [
                 "--nolazy",
@@ -53,6 +57,20 @@
                 "ts-node/register"
             ],
             "console": "internalConsole"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "vscode-jest-tests-inutil",
+            "program": "${workspaceRoot}/node_modules/jest/bin/jest.js",
+            "args": [
+                "--config",
+                "jest-ut.config.js",
+                "--runInBand"
+            ],
+            "cwd": "${workspaceFolder}",
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen"
         }
     ]
 }
