--- a/package.json
+++ b/package.json
@@ -13,19 +13,22 @@
     "devDependencies": {
         "@angular-devkit/build-angular": "^0.13.0",
         "@types/globby": "^8.0.0",
-        "@types/jest": "^23.3.13",
+        "@types/jest": "^24.0.9",
+        "@types/node": "^11.9.5",
         "@types/parse5": "^5.0.0",
         "@types/webpack": "^4.4.24",
+        "clean-webpack-plugin": "^1.0.1",
         "jest": "^24.0.0",
         "jest-expect-message": "^1.0.2",
         "micromatch": "^3.1.10",
         "p-each-series": "^1.0.0",
         "parse5": "^5.1.0",
-        "ts-jest": "^23.10.5",
+        "ts-jest": "^24.0.0",
         "ts-node": "^8.0.2",
         "ts-util-is": "^1.1.3",
-        "webpack": "^4.29.0",
-        "webpack-cli": "^3.2.1"
+        "typescript": "^3.3.3333",
+        "webpack": "^4.29.5",
+        "webpack-cli": "^3.2.3"
     },
     "dependencies": {
         "applicationinsights": "^1.1.0"
