--- a/e2e/tsconfig.json
+++ b/e2e/tsconfig.json
@@ -1,6 +1,7 @@
+// just for IDE//
 {
     "compilerOptions": {
-        // "baseUrl": "../",
+        //        "baseUrl": "../",
         "target": "es2017",
         "lib": [],
     },
