--- a/e2e/webpack-config/tsconfig.json
+++ b/e2e/webpack-config/tsconfig.json
@@ -7,7 +7,7 @@
         "**/*.spec.ts"
     ],
     "compilerOptions": {
-        "baseUrl": "./",
+        // "baseUrl": "./",
         "moduleResolution": "node",
         // "outDir": "dist",
         "sourceMap": true,
