--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "compilerOptions": {
         "baseUrl": "./",
         "moduleResolution": "node",
+        "declaration": true,
         "outDir": "dist",
         "sourceMap": true,
         "target": "es2018",
