--- a/e2e/webpack-config/tsconfig.json
+++ b/e2e/webpack-config/tsconfig.json
@@ -7,6 +7,8 @@
         "**/*.spec.ts"
     ],
     "compilerOptions": {
+        "allowSyntheticDefaultImports": true,
+        "esModuleInterop": true,
         // "baseUrl": "./",
         "moduleResolution": "node",
         // "outDir": "dist",
