--- a/e2e/tsconfig.json
+++ b/e2e/tsconfig.json
@@ -1,5 +1,6 @@
 // just for IDE//
 {
+    "extends": "../tsconfig.json",
     "compilerOptions": {
         //        "baseUrl": "../",
         "target": "es2017",
