--- a/package.json
+++ b/package.json
@@ -5,41 +5,46 @@
     "license": "MIT",
     "scripts": {
         "clean": "shx rm -r dist",
-        "prebuild": "yarn clean",
-        "postbuild": "yarn all-test",
-        "build": "rm -R dist && tsc",
-        "all-test": "yarn test && yarn e2e",
+        "prebuild": "npm run clean",
+        "postbuild": "npm run all-test",
+        "build": "tsc",
+        "all-test": "npm run test && npm run e2e",
         "test": "jest --config jest-ut.config.js",
-        "e2e": "yarn e2e-plain-webpack && yarn e2e-angular",
+        "e2e": "npm run e2e-plain-webpack && npm run e2e-angular",
         "e2e-plain-webpack": "jest --config jest-e2e-plainwebpack.config.js",
         "e2e-angular": "jest --config jest-e2e-angular.config.js",
         "set-follow-symlinks-watcher": "sed -i 's/followSymlinks: false/followSymlinks: true/g' node_modules/watchpack/lib/DirectoryWatcher.js",
-        "push": "npm version patch && git push && git push --tags",
-        "publish": "tsc && npm publish --access public"
+        "push": "npm run version patch && git push && git push --tags",
+        "publish": "tsc && npm run publish --access public"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "^0.13.3",
         "@angular/core": "^7.2.7",
-        "@types/globby": "^8.0.0",
+        "@types/globby": "^9.1.0",
         "@types/jest": "^24.0.9",
-        "@types/node": "^11.9.5",
+        "@types/node": "^12.7.1",
         "@types/parse5": "^5.0.0",
         "@types/webpack": "^4.4.25",
-        "clean-webpack-plugin": "^1.0.1",
+        "clean-webpack-plugin": "^3.0.0",
+        "html-webpack-plugin": "^3.2.0",
         "jest": "^24.1.0",
         "jest-expect-message": "^1.0.2",
-        "micromatch": "^3.1.10",
-        "p-each-series": "^1.0.0",
+        "micromatch": "^4.0.2",
+        "p-each-series": "^2.1.0",
         "parse5": "^5.1.0",
+        "shx": "^0.3.2",
         "ts-jest": "^24.0.0",
         "ts-node": "^8.0.2",
         "ts-util-is": "^1.1.3",
-        "typescript": "^3.3.3333",
+        "typescript": "^3.5.3",
         "webpack": "^4.29.5",
         "webpack-cli": "^3.2.3"
     },
     "dependencies": {
-        "@angular-devkit/core": "^7.3.3"
+        "@angular-devkit/core": "^7.3.3",
+        "@ud-angular-builders/custom-webpack-7": "^7.6.5",
+        "@upradata/browser-util": "^1.0.11",
+        "@upradata/node-util": "^2.0.2"
     },
     "majestic": {
         "jestConfig": "jest-ut.config.js"
