--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
     "compilerOptions": {
         "baseUrl": "./",
         "moduleResolution": "node",
+        "allowSyntheticDefaultImports": true,
+        "esModuleInterop": true,
         "declaration": true,
         "outDir": "dist",
         "sourceMap": true,
