--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "main": "dist",
     "license": "MIT",
     "scripts": {
-        "clean": "shx rm -r dist",
+        "clean": "shx rm -r dist || true",
         "prebuild": "npm run clean",
         "postbuild": "npm run all-test",
         "build": "tsc",
@@ -18,12 +18,12 @@
         "publish": "tsc && npm run publish --access public"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^0.13.3",
-        "@angular/core": "^7.2.7",
+        "@angular-devkit/build-angular": "^0.802.1",
+        "@angular/core": "^8.2.1",
         "@types/globby": "^9.1.0",
         "@types/jest": "^24.0.9",
         "@types/node": "^12.7.1",
-        "@types/parse5": "^5.0.0",
+        "@types/parse5": "^5.0.2",
         "@types/webpack": "^4.4.25",
         "clean-webpack-plugin": "^3.0.0",
         "html-webpack-plugin": "^3.2.0",
@@ -34,15 +34,15 @@
         "parse5": "^5.1.0",
         "shx": "^0.3.2",
         "ts-jest": "^24.0.0",
-        "ts-node": "^8.0.2",
+        "ts-node": "^8.3.0",
         "ts-util-is": "^1.1.3",
         "typescript": "^3.5.3",
         "webpack": "^4.29.5",
         "webpack-cli": "^3.2.3"
     },
     "dependencies": {
-        "@angular-devkit/core": "^7.3.3",
-        "@ud-angular-builders/custom-webpack-7": "^7.6.5",
+        "@angular-devkit/core": "^8.2.1",
+        "@ud-angular-builders/custom-webpack": "^8.0.6",
         "@upradata/browser-util": "^1.0.11",
         "@upradata/node-util": "^2.0.2"
     },
