--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "webpack",
-    "version": "1.0.0",
+    "name": "@ud-angular-builders/add-asset-index-plugin",
+    "version": "8.0.1",
     "main": "dist",
     "license": "MIT",
     "scripts": {
