--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "publishConfig": {
         "access": "public"
     },
+    "files": [
+        "dist"
+    ],
     "scripts": {
         "clean": "shx rm -r dist || true",
         "prebuild": "npm run clean",
