--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "devDependencies": {
         "@angular-devkit/build-angular": "^0.802.1",
         "@angular/core": "^8.2.1",
-        "@types/globby": "^9.1.0",
         "@types/jest": "^24.0.9",
         "@types/node": "^12.7.1",
         "@types/parse5": "^5.0.2",
@@ -46,20 +45,23 @@
         "jest-expect-message": "^1.0.2",
         "micromatch": "^4.0.2",
         "p-each-series": "^2.1.0",
-        "parse5": "^5.1.0",
         "shx": "^0.3.2",
         "ts-jest": "^24.0.0",
         "ts-node": "^8.3.0",
         "ts-util-is": "^1.1.3",
         "typescript": "^3.5.3",
-        "webpack": "^4.29.5",
         "webpack-cli": "^3.2.3"
     },
     "dependencies": {
-        "@angular-devkit/core": "^8.2.1",
-        "@ud-angular-builders/custom-webpack": "^8.0.6",
+        "@types/globby": "^9.1.0",
+        "@ud-angular-builders/custom-webpack": "^8.0.11",
         "@upradata/browser-util": "^1.0.11",
-        "@upradata/node-util": "^2.0.2"
+        "@upradata/node-util": "^2.0.2",
+        "parse5": "^5.1.0"
+    },
+    "peerDependencies": {
+        "webpack": "^4.29.5",
+        "@angular-devkit/core": "^8.2.1"
     },
     "majestic": {
         "jestConfig": "jest-ut.config.js"
