--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -100,6 +100,20 @@
             "cwd": "${workspaceFolder}",
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen"
-        }
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Ng Build",
+            "cwd": "${workspaceFolder}/angular-test",
+            "program": "${workspaceFolder}/angular-test/node_modules/.bin/ng",
+            "args": [
+                "build"
+            ],
+            "outFiles": [
+                "angular-test/dist"
+            ],
+            "console": "integratedTerminal"
+        },
     ]
 }
