--- a/package.json
+++ b/package.json
@@ -33,35 +33,42 @@
         "npm-publish": "tsc && npm publish --access public"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^0.802.1",
-        "@angular/core": "^8.2.1",
-        "@types/jest": "^24.0.9",
-        "@types/node": "^12.7.1",
+        "@angular-devkit/build-angular": "^0.802.2",
+        "@angular/compiler": "^8.2.2",
+        "@angular/compiler-cli": "^8.2.2",
+        "@angular/core": "^8.2.2",
+        "@types/fs-extra": "^8.0.0",
+        "@types/jest": "^24.0.17",
+        "@types/node": "^12.7.2",
         "@types/parse5": "^5.0.2",
-        "@types/webpack": "^4.4.25",
+        "@types/rimraf": "^2.0.2",
+        "@types/webpack": "^4.32.1",
         "clean-webpack-plugin": "^3.0.0",
+        "fs-extra": "^8.1.0",
         "html-webpack-plugin": "^3.2.0",
-        "jest": "^24.1.0",
+        "jest": "^24.9.0",
         "jest-expect-message": "^1.0.2",
         "micromatch": "^4.0.2",
         "p-each-series": "^2.1.0",
+        "rimraf": "^3.0.0",
         "shx": "^0.3.2",
-        "ts-jest": "^24.0.0",
+        "ts-jest": "^24.0.2",
         "ts-node": "^8.3.0",
         "ts-util-is": "^1.1.3",
         "typescript": "^3.5.3",
-        "webpack-cli": "^3.2.3"
+        "webpack": "^4.39.1",
+        "webpack-cli": "^3.3.6"
     },
     "dependencies": {
         "@types/globby": "^9.1.0",
-        "@ud-angular-builders/custom-webpack": "^8.0.11",
+        "@ud-angular-builders/custom-webpack": "^8.0.15",
         "@upradata/browser-util": "^1.0.11",
         "@upradata/node-util": "^2.0.2",
         "parse5": "^5.1.0"
     },
     "peerDependencies": {
-        "webpack": "^4.29.5",
-        "@angular-devkit/core": "^8.2.1"
+        "webpack": "^4.39.2",
+        "@angular-devkit/core": "^8.2.2"
     },
     "majestic": {
         "jestConfig": "jest-ut.config.js"
